--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           style: 'mapbox://styles/stuvstak/cjs70pvp51fz31fqlbgqk99y8',
           center: [-122.793653, 45.385959],
           zoom: 13.4,
-          attribution: 'Created By Kristoffer Stuvstad</a> based on the <a href="assets/license.txt">Mapbox basic style</a>'
+          attribution: 'Created By Kristoffer Stuvstad based on the <a href="assets/license.txt">Mapbox basic style</a>'
         });
       </script>
   </body>
