--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         const map = new mapboxgl.Map({
           container: 'map',
-          style: 'mapbox://styles/stuvstak/cjs70pvp51fz31fqlbgqk99y8',
+          style: 'assets/style.json',
           center: [-122.793653, 45.385959],
           zoom: 13.4,
           attribution: 'Created By Kristoffer Stuvstad based on the <a href="assets/license.txt">Mapbox basic style</a>'
