--- a/index.html
+++ b/index.html
@@ -1,37 +1,27 @@
 <!DOCTYPE html>
-  <html>
-    <head>
-      <meta charset='utf-8' />
-      <title>Display a map</title>
-      <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
-      <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.0/mapbox-gl.js'></script>
-      <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.0/mapbox-gl.css' rel='stylesheet' />
-      <style>
-        body {
-          margin:0;
-          padding:0;
-        }
-
-        #map {
-          position:absolute;
-          top:0;
-          bottom:0;
-          width:100%;
-        }
-      </style>
+<html>
+  <head>
+    <meta charset='utf-8' />
+    <title>Team Colors Basemap</title>
+    <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
+    <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.0/mapbox-gl.js'></script>
+    <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.0/mapbox-gl.css' rel='stylesheet' />
+    <style>
+      body { margin:0; padding:0; }
+      #map { position:absolute; top:0; bottom:0; width:100%; }
+    </style>
   </head>
   <body>
     <div id='map'></div>
-      <script>
-        mapboxgl.accessToken = 'pk.eyJ1Ijoic3R1dnN0YWsiLCJhIjoiY2pycjA3c3ZyMDJ5ejQ0bXlwMGVtMDJ6MCJ9.EKpR2FQUJd8Qz0TJIm_NpQ';
+    <script>
+      mapboxgl.accessToken = 'pk.eyJ1Ijoic3R1dnN0YWsiLCJhIjoiY2pycjA3c3ZyMDJ5ejQ0bXlwMGVtMDJ6MCJ9.EKpR2FQUJd8Qz0TJIm_NpQ';
 
-        const map = new mapboxgl.Map({
-          container: 'map',
-          style: 'assets/style.json',
-          center: [-122.793653, 45.385959],
-          zoom: 13.4,
-          attribution: 'Created By Kristoffer Stuvstad based on the <a href="assets/license.txt">Mapbox basic style</a>'
-        });
-      </script>
+      const map = new mapboxgl.Map({
+        container: 'map',
+        style: 'mapbox://styles/stuvstak/cjs70pvp51fz31fqlbgqk99y8',
+        center: [-122.793653, 45.385959],
+        zoom: 13.4
+      });
+    </script>
   </body>
 </html>
