--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
       const map = new mapboxgl.Map({
         container: 'map',
-        style: 'mapbox://styles/stuvstak/cjs70pvp51fz31fqlbgqk99y8',
+        style: 'assets/style.json',
         center: [-122.793653, 45.385959],
         zoom: 13.4
       });
