--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset='utf-8' />
-    <title>Team Colors Basemap</title>
+    <title>Display a map</title>
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.0/mapbox-gl.js'></script>
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.0/mapbox-gl.css' rel='stylesheet' />
@@ -18,7 +18,7 @@
 
       const map = new mapboxgl.Map({
         container: 'map',
-        style: 'assets/style.json',
+        style: 'mapbox://styles/stuvstak/cjs70pvp51fz31fqlbgqk99y8',
         center: [-122.793653, 45.385959],
         zoom: 13.4
       });
