--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset='utf-8' />
+    <meta charset="UTF-8">
     <title>Display a map</title>
-    <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v1.4.0/leaflet.css"/>
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.0/mapbox-gl.css' rel='stylesheet' />
     <style>
@@ -17,30 +16,7 @@
     <script src="http://rawgit.com/mapbox/mapbox-gl-leaflet/master/leaflet-mapbox-gl.js"></script>
   </head>
   <body>
-    <div id='map'></div>
-    <script>
-      mapboxgl.accessToken = 'pk.eyJ1Ijoic3R1dnN0YWsiLCJhIjoiY2pycjA3c3ZyMDJ5ejQ0bXlwMGVtMDJ6MCJ9.EKpR2FQUJd8Qz0TJIm_NpQ';
-
-      const map = new mapboxgl.Map({
-        container: 'map',
-        style: 'assets/style.json',
-        center: [-122.793653, 45.385959],
-        zoom: 13.4
-      });
-      /*
-      var mymap = L.map('map', {
-        center: [-122.793653, 45.385959],
-        zoom: 13.4
-      });
-
-      mapbox_token = 'pk.eyJ1Ijoic3R1dnN0YWsiLCJhIjoiY2pycjA3c3ZyMDJ5ejQ0bXlwMGVtMDJ6MCJ9.EKpR2FQUJd8Qz0TJIm_NpQ';
-
-      var gl = L.mapboxGL({
-        accessToken: mapbox_token,
-        style: 'assets/style.json',
-        attribution: 'Created By Kristoffer Stuvstad based on the <a href="assets/license.txt">Mapbox basic style</a>'
-      }).addTo(mymap);
-      */
-    </script>
+    <div id="map"></div>
+    <script src="main.js"</script>
   </body>
 </html>
