--- a/index.html
+++ b/index.html
@@ -2,21 +2,34 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Display a map</title>
+    <title>Team Colors Basemap</title>
+    <!-- Stylesheet -->
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v1.4.0/leaflet.css"/>
-    <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.0/mapbox-gl.css' rel='stylesheet' />
-    <style>
-      body { margin:0; padding:0; }
-      #map { position:absolute; top:0; bottom:0; width:100%; }
-    </style>
-    <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.0/mapbox-gl.js'></script>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css"/>
+    <link href="https://api.tiles.mapbox.com/mapbox-gl-js/v0.40.1/mapbox-gl.css" rel='stylesheet'/>
     <!-- Javascript Libraries -->
     <script src="http://cdn.leafletjs.com/leaflet/v1.4.0/leaflet.js"></script>
+    <!-- mapbox gl js -->
+    <script src="https://api.tiles.mapbox.com/mapbox-gl-js/v0.40.1/mapbox-gl.js"></script>
     <!-- leaflet mapbox js -->
     <script src="http://rawgit.com/mapbox/mapbox-gl-leaflet/master/leaflet-mapbox-gl.js"></script>
+    <script src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-ajax/2.1.0/leaflet.ajax.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/chroma-js/1.3.4/chroma.min.js"></script>
   </head>
   <body>
-    <div id="map"></div>
-    <script src="main.js"</script>
+    <div id="map" style="position:absolute; top:0; bottom:0; width:100%;"></div>
+    <script>
+    var mymap = L.map("map").setView([-122.793653, 45.385959], 4);
+    
+    mapbox_token = 'pk.eyJ1Ijoic3R1dnN0YWsiLCJhIjoiY2pycjA3c3ZyMDJ5ejQ0bXlwMGVtMDJ6MCJ9.EKpR2FQUJd8Qz0TJIm_NpQ';
+
+    var gl = L.mapboxGL({
+      accessToken: mapbox_token,
+      style: 'assets/style.json',
+      attribution: 'Created By Kristoffer Stuvstad based on the <a href="assets/license.txt">Mapbox basic style</a>'
+    }).addTo(mymap);
+    </script>
   </body>
 </html>
